--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ ProductPlatformAnalyzer/obj/Debug/Microsoft_Example_Added.csproj.FileListAbsolut
 ProductPlatformAnalyzer/obj/Debug/Microsoft_Example_Added.csprojResolveAssemblyReference.cache
 ProductPlatformAnalyzer/obj/Debug/Microsoft_Example_Added.exe
 ProductPlatformAnalyzer/obj/Debug/Microsoft_Example_Added.pdb
+
+ProductPlatformAnalyzer.v11.suo
