--- a/ProductPlatformAnalyzer/ProductPlatformAnalyzer.csproj
+++ b/ProductPlatformAnalyzer/ProductPlatformAnalyzer.csproj
@@ -32,6 +32,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Altova, Version=1.0.5997.24845, Culture=neutral, PublicKeyToken=994749c2bff1fea2, processorArchitecture=MSIL">
+      <HintPath>..\packages\AMLEngine.3.6.1\lib\net40\Altova.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="AltovaXML, Version=1.0.5997.24846, Culture=neutral, PublicKeyToken=994749c2bff1fea2, processorArchitecture=MSIL">
+      <HintPath>..\packages\AMLEngine.3.6.1\lib\net40\AltovaXML.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="AMLEngine, Version=3.6.1.0, Culture=neutral, PublicKeyToken=994749c2bff1fea2, processorArchitecture=MSIL">
+      <HintPath>..\packages\AMLEngine.3.6.1\lib\net40\AMLEngine.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Z3">
       <HintPath>..\..\..\z3-4.5.0-x86-win\bin\Microsoft.Z3.dll</HintPath>
     </Reference>
@@ -45,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AMLConverter.cs" />
     <Compile Include="Enumerations.cs" />
     <Compile Include="FrameworkWrapper.cs" />
     <Compile Include="GeneralUtilities.cs" />
@@ -61,9 +74,13 @@
   <ItemGroup>
     <None Include="App.config" />
     <Content Include="Test\4.1.1V1VG2O0C1P.xml" />
-    <Content Include="Test\4.2.1V1VG2O0C1P.xml" />
+    <Content Include="Test\4.2.1V1VG2O0C1P.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Test\4.3.1V1VG2O0C1P.xml" />
     <Content Include="Test\9.2.2V1VG2O0C1P.xml" />
+    <None Include="packages.config" />
+    <None Include="Test\demo_variant.aml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Debug\Debug0.txt" />
@@ -123,7 +140,9 @@
     <Content Include="Test\Case2Demo.xml">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Test\Case3Demo.xml" />
+    <Content Include="Test\Case3Demo.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Test\TestData10.xml">
       <SubType>Designer</SubType>
     </Content>
