--- a/ProductPlatformAnalyzer/ProductPlatformAnalyzer.csproj
+++ b/ProductPlatformAnalyzer/ProductPlatformAnalyzer.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>ProductPlatformAnalyzer.Menu</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Altova, Version=1.0.5997.24845, Culture=neutral, PublicKeyToken=994749c2bff1fea2, processorArchitecture=MSIL">
       <HintPath>..\packages\AMLEngine.3.6.1\lib\net40\Altova.dll</HintPath>
@@ -63,6 +66,7 @@
     <Compile Include="Enumerations.cs" />
     <Compile Include="FrameworkWrapper.cs" />
     <Compile Include="GeneralUtilities.cs" />
+    <Compile Include="Menu.cs" />
     <Compile Include="Messages.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Operation.cs" />
@@ -98,6 +102,7 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Test\Volvo_CAB_V4.xml" />
+    <Content Include="VariationPoints.xml" />
     <None Include="App.config" />
     <Content Include="Test\4.1.xml" />
     <Content Include="Test\4.2.xml">
@@ -106,6 +111,7 @@
     <Content Include="Test\4.3.xml" />
     <Content Include="Test\9.2.2V1VG2O0C1P.xml" />
     <None Include="packages.config" />
+    <Content Include="Test\1.3.xml" />
     <None Include="Test\demo_variant.aml">
       <SubType>Designer</SubType>
     </None>
