--- a/ProductPlatformAnalyzer/ProductPlatformAnalyzer.csproj
+++ b/ProductPlatformAnalyzer/ProductPlatformAnalyzer.csproj
@@ -48,7 +48,7 @@
       <HintPath>..\packages\AMLEngine.3.6.1\lib\net40\AMLEngine.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.Z3, Version=4.5.0.0, Culture=neutral, PublicKeyToken=9c8d792caae602a2, processorArchitecture=x86">
+    <Reference Include="Microsoft.Z3, Version=4.5.0.0, Culture=neutral, PublicKeyToken=9c8d792caae602a2, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\w64\Microsoft.Z3.dll</HintPath>
     </Reference>
@@ -80,8 +80,18 @@
     <Compile Include="Z3SolverEngineer.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Test\1.4.xml" />
+    <Content Include="Test\1.5.xml">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="Test\1.6.xml">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="Test\1.7.xml" />
     <Content Include="Test\3.0.xml" />
-    <Content Include="Test\3.1.xml" />
+    <Content Include="Test\3.1.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Test\3.2.xml" />
     <Content Include="Test\3.3.xml" />
     <Content Include="Test\3.4.xml" />
@@ -92,7 +102,7 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Test\4.7.xml" />
-    <Content Include="Test\Volvo_CAB.xml">
+    <Content Include="Test\ProductPlatform.xml">
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Test\Volvo_CAB_V2.xml">
@@ -102,7 +112,9 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Test\Volvo_CAB_V4.xml" />
-    <Content Include="VariationPoints.xml" />
+    <Content Include="VariationPoints.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="App.config" />
     <Content Include="Test\4.1.xml" />
     <Content Include="Test\4.2.xml">
@@ -111,7 +123,9 @@
     <Content Include="Test\4.3.xml" />
     <Content Include="Test\9.2.2V1VG2O0C1P.xml" />
     <None Include="packages.config" />
-    <Content Include="Test\1.3.xml" />
+    <Content Include="Test\1.3.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Test\demo_variant.aml">
       <SubType>Designer</SubType>
     </None>
@@ -156,7 +170,9 @@
     <Content Include="Test\9.1.2V1VG2O0C1P.xml" />
     <Content Include="Test\9.3.2V1VG2O0C1P.xml" />
     <Content Include="Test\Old3.2V1VG2O1C1PNoTransitions.xml" />
-    <Content Include="Test\1.2.xml" />
+    <Content Include="Test\1.2.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Test\6.2V1VG2O0C0P.xml">
       <SubType>Designer</SubType>
     </Content>
