Removing some entity creation functions N replacing with constructors

--- a/ProductPlatform.Test/ProductPlatform.Test.csproj
+++ b/ProductPlatform.Test/ProductPlatform.Test.csproj
@@ -76,7 +76,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="ProductPlatformTest.cs" />
+    <Compile Include="Z3SolverEngineer_Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
